--- a/numeron web/src/App.css
+++ b/numeron web/src/App.css
@@ -34,3 +34,9 @@
     display: flex;
     justify-content: center;
 }
+
+.layoutrecentdata{
+    display: flex;
+    justify-content: right;
+    
+}
